--- a/QuotaReport_ASQ.html
+++ b/QuotaReport_ASQ.html
@@ -4,7 +4,7 @@
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     
     <script src="data/ASQ_Quota_Airline_Dest.js"></script>
-    <script src="data/ASQ_Quota_Airlines.js"></script>
+    <script src="data/ASQ_Quota_Airline.js"></script>
     <script src="data/ASQ_Quota_Dest.js"></script>
     <script src="data/flight_list.js"></script>
     <script src="data/selected_flights.js"></script>
