update new files

--- a/DailyPlan_ASQ.html
+++ b/DailyPlan_ASQ.html
@@ -81,7 +81,7 @@
           {
             var row = daily_plan_data_asq[i];
             data.addRows([[
-                row.display_date, 
+                row.Date, 
                 row.display_terminal, 
 
                 row.Flight, 
